--- a/source/progressWidget.ui
+++ b/source/progressWidget.ui
@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>317</width>
-    <height>69</height>
+    <width>422</width>
+    <height>198</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -14,29 +14,75 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout" >
    <item>
-    <widget class="QLabel" name="label" >
-     <property name="font" >
-      <font>
-       <pointsize>17</pointsize>
-      </font>
-     </property>
-     <property name="text" >
-      <string>Please wait...</string>
-     </property>
-     <property name="alignment" >
-      <set>Qt::AlignCenter</set>
-     </property>
+    <widget class="QGroupBox" name="groupBox" >
+     <layout class="QHBoxLayout" name="horizontalLayout" >
+      <property name="margin" >
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="QLabel" name="label_2" >
+        <property name="sizePolicy" >
+         <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
+          <horstretch>136</horstretch>
+          <verstretch>136</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="pixmap" >
+         <pixmap resource="../resources/resources.qrc" >:/logo.png</pixmap>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer" >
+        <property name="orientation" >
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0" >
+         <size>
+          <width>0</width>
+          <height>0</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QLabel" name="label" >
+        <property name="font" >
+         <font>
+          <pointsize>17</pointsize>
+         </font>
+        </property>
+        <property name="text" >
+         <string>Downloading wallpaper...</string>
+        </property>
+        <property name="alignment" >
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer_2" >
+        <property name="orientation" >
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0" >
+         <size>
+          <width>0</width>
+          <height>0</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
     </widget>
    </item>
    <item>
-    <widget class="QProgressBar" name="progressBar" >
-     <property name="value" >
-      <number>24</number>
-     </property>
-    </widget>
+    <widget class="QProgressBar" name="progressBar" />
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../resources/resources.qrc" />
+ </resources>
  <connections/>
 </ui>
