Tweaks to progress widget

--- a/source/progressWidget.ui
+++ b/source/progressWidget.ui
@@ -5,7 +5,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>422</width>
+    <width>421</width>
     <height>198</height>
    </rect>
   </property>
@@ -65,9 +65,12 @@
         <property name="orientation" >
          <enum>Qt::Horizontal</enum>
         </property>
+        <property name="sizeType" >
+         <enum>QSizePolicy::MinimumExpanding</enum>
+        </property>
         <property name="sizeHint" stdset="0" >
          <size>
-          <width>0</width>
+          <width>20</width>
           <height>0</height>
          </size>
         </property>
