Tweaks to icons

--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -2,5 +2,6 @@
   <qresource>
     <file>logo.png</file>
     <file>trayicon-16.png</file>
+    <file>trayicon-18.png</file>
   </qresource>
 </RCC>
