Adding "About" dialog box.

--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource>
+    <file>about.xhtml</file>
     <file>logo.png</file>
     <file>trayicon-16.png</file>
     <file>trayicon-18.png</file>
